raphael: Disable night light on FOD
 - By default it is set to false source side

Signed-off-by: Pranav Temkar <pranavtemkar@gmail.com>

--- a/overlay-cherish/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-cherish/frameworks/base/core/res/res/values/config.xml
@@ -31,4 +31,6 @@
         <item>com.google.android.gms/com.google.android.gms.nearby.messages.service.NearbyMessagesService</item>
     </string-array>
 
+    <!-- Night Light FOD -->
+    <bool name="disable_fod_night_light">true</bool>
 </resources>
