--- a/overlay-cherish/frameworks/base/core/res/res/values/cherish_config.xml
+++ b/overlay-cherish/frameworks/base/core/res/res/values/cherish_config.xml
@@ -52,7 +52,9 @@
     <integer name="config_sysCPUTempMultiplier">1000</integer>
     <integer name="config_sysBatteryTempMultiplier">10</integer>
 
-     <!-- Whether to show Refresh Rate Tile or Not (Only For High Refresh Rate Devices) -->
-     <bool name="config_showRefreshRateTile">false</bool>
+    <!-- Whether to show Refresh Rate Tile or Not (Only For High Refresh Rate Devices) -->
+    <bool name="config_showRefreshRateTile">false</bool>
 
+    <!-- Night Light FOD -->
+    <bool name="disable_fod_night_light">true</bool>
 </resources>
