raphael: Support UDFPS on AoD
Change-Id: I7196dce967c9adbc62bb5156ade749c92c7780a1

Build/use UDFPS sensor
sepolicy: Label UDFPS state node
Change-Id: I7a4ca9a3e98e0af90be5aedc88fa1eaa344abb76
Co-authored-by: Bruno Martins <bgcngm@gmail.com>
Co-authored-by: John Galt <johngaltfirstrun@gmail.com>
Signed-off-by: Mesquita <mesquita@aospa.co>
Signed-off-by: SageOfD6Path <mail2anirban95@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -609,4 +609,7 @@
 
     <!-- Wether to handle audio direction changes between major call states -->
     <bool name="config_handleAudioDirectionChangesBetweenCallStateChanges">false</bool>
+
+    <!-- Type of the udfps long press sensor. Empty if long press is not supported. -->
+    <string name="config_dozeUdfpsLongPressSensorType" translatable="false">org.lineageos.sensor.udfps</string>
 </resources>
