--- a/overlay-cherish/frameworks/base/core/res/res/values/cherish_config.xml
+++ b/overlay-cherish/frameworks/base/core/res/res/values/cherish_config.xml
@@ -65,4 +65,9 @@
      <!-- Whether to show Refresh Rate Tile or Not (Only For High Refresh Rate Devices) -->
      <bool name="config_showRefreshRateTile">false</bool>
 
+    <!-- Smart charging -->
+    <bool name="config_smartChargingAvailable">true</bool>
+    <string name="config_smartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string> 
+    <string name="config_smartChargingSuspendValue" translatable="false">1</string>
+    <string name="config_smartChargingResumeValue" translatable="false">0</string>
 </resources>
