--- a/overlay-nad/frameworks/base/core/res/res/values/nad_config.xml
+++ b/overlay-nad/frameworks/base/core/res/res/values/nad_config.xml
@@ -50,4 +50,7 @@
 
     <!-- Display color inversion availability -->
     <bool name="config_displayInversionAvailable">false</bool>
+
+    <!-- Boost Framework -->
+    <bool name="config_supportsBoostFramework">true</bool>
 </resources>
