--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,6 +24,18 @@
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
 
+    <!-- Doze: whether the single tap sensor uses the proximity sensor.
+         If both this parameter and doze_selectively_register_prox are true, registration for the
+         sensor will be delayed when the device first enters dozing but the device has not entered its
+         low powered state yet. -->
+    <bool name="doze_single_tap_uses_prox">false</bool>
+
+    <!-- Doze: whether the long press sensor uses the proximity sensor.
+         If both this parameter and doze_selectively_register_prox are true, registration for the
+         sensor will be delayed when the device first enters dozing but the device has not entered its
+         low powered state yet. -->
+    <bool name="doze_long_press_uses_prox">false</bool>
+
     <!-- Tiles to auto add to Quick Settings upon first change of a given secure setting.
          The syntax is setting-name:spec. If the tile is a TileService, the spec should be specified
          as custom(package/class). Relative class name is supported. -->
