raphael: overlay: Enable pocket mode

--- a/overlay-superior/frameworks/base/core/res/res/values/superior_config.xml
+++ b/overlay-superior/frameworks/base/core/res/res/values/superior_config.xml
@@ -31,6 +31,7 @@
 
     <!-- Pocket Lock -->
     <bool name="config_pocketUseLightSensor">false</bool>
+    <bool name="config_pocketModeSupported">true</bool>
 
     <!-- Default value for proximity check on screen wake
      NOTE ! - Enable for devices that have a fast response proximity sensor (ideally < 300ms)-->
